fix bug also work on mobile responsiveness

--- a/public/style.css
+++ b/public/style.css
@@ -10,9 +10,8 @@ body{
 }
 .header{
     width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(images/netflixlogo.jpeg); 
-    background-size: cover ;
+    height: 100vh; 
+    
     background-position: center;
     padding: 10px 8%;
     position: relative;
@@ -52,9 +51,9 @@ nav button{
     margin-top: 100px
 }
 .header-content h1{
-    font-size: 60px;
-    font-weight: 600;
-    line-height: 70px;
+    font-size: 50px;
+    font-weight: 200;
+    line-height: 80px;
     max-width: 650px;
 
 }
@@ -86,3 +85,46 @@ nav button{
     cursor: pointer;
     padding: 15px 30px;
 }
+
+
+@media only screen and (max-width: 767px) {
+    .header{
+        width: 100%;
+        height: 100vh;
+        background-image: url('https://i.imgur.com/xyz.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 10px 8%;
+        position: relative;
+        }
+  
+    .header-content {
+      top: 20%;
+      transform: translate(-50%, 0);
+      padding: 20px;
+      text-align: center;
+    }
+  
+    .header-content h1 {
+      font-size: 36px;
+      line-height: 50px;
+    }
+  
+    nav {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  
+    .logo {
+      text-align: center;
+      width: 100%;
+      margin-bottom: 20px;
+      font-size: x-large;
+      color: #e30000;
+    }
+  
+    nav button {
+      display: none;
+    }
+  }
